--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,234 +3,117 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero-image {
-    padding-top: 8%;
-    background-image: url("/img/h.jpg");
-    width: 100%;
-    height: 60vh;
+.jumbotron {
+    background-image: url("https://cdn.shopify.com/s/files/1/1758/4293/t/71/assets/pf-02cbc49b--bannermeals2.png?v=1583889805");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
-.hero-text {
-    position: relative;
+.containergif {
     text-align: center;
 }
 
-.hero-text a {
-    outline-offset: 15px;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    outline-style: solid;
-    text-transform: uppercase;
+.containergif h1 {
+    color: whitesmoke;
+    font-size: 4em;
 }
 
-.hero-text b {
-    outline-offset: 15px;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    outline-style: solid;
+.containergif a {
+    border: 2px solid rgb(236, 179, 198);
+    padding: 6px;
     text-transform: uppercase;
+    text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+    nav {
+        position: absolute;
+        right: 0;
+        top: 3em;
+        font-size: 17px;
+    }
+    main {
+        margin-top: 6em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    header img {
+        height: 4em;
+    }
+    nav {
+        font-size: 17px;
+    }
+    main {
+        margin-top: 9em;
+    }
 }
 
 
 /*
 gif images for content
 */
+
+@media screen and (min-width: 768px) {
+    .grid-container {
+        display: inline-grid;
+        gap: 1.5vw;
+        grid-template-columns: 23% 23% 23% 23%;
+        justify-content: space-evenly;
+    }
+    .grid-item img {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .grid-container {
+        display: inline-grid;
+        gap: 15px;
+        grid-template-columns: 22% 22% 22% 22%;
+        justify-content: space-evenly;
+    }
+    .grid-item img {
+        width: 150px;
+    }
+}
 
 .content {
     text-align: center;
 }
 
-.grid-container {
-    display: inline-grid;
-    gap: 20px;
-    grid-template-columns: 23% 23% 23% 23%;
-    justify-content: space-evenly;
-}
-
-.grid-item img {
-    width: 250px;
-    height: 23%;
-    filter: brightness(80%);
-}
-
 
 /*
 gif images for content
 */
 
 
-/*HEADER BEGIN*/
-
-.header ul {
-    list-style-type: none;
-    margin: 0;
-    overflow: hidden;
-    background-color: white;
-}
-
-.header li {
-    float: right;
-    padding-top: 1.7em;
-}
-
-.header li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-header li a:hover {
-    opacity: 0.8;
-    color: lightgrey;
-}
-
-
-/*HEADER END*/
-
-
-/*POPUP LOGIN BEGIN */
-
-
-/* Full-width input fields */
-
-input[type=text],
-input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
-
-
-/* Set a style for all buttons */
-
-button {
-    background-color: white;
-    color: back;
-    padding: 14px 16px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    font-size: inherit;
-}
-
-button:hover {
-    opacity: 0.8;
-    color: lightgrey;
-}
-
-
-/* Extra styles for the cancel button */
-
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #f44336;
-}
-
-
-/* Center the image and position the close button */
-
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-    position: relative;
-}
-
-img.avatar {
-    width: 40%;
-    border-radius: 50%;
-}
-
-.container {
-    padding: 16px;
-}
-
-span.psw {
-    float: right;
-    padding-top: 16px;
-}
-
-
-/* The Modal (background) */
-
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-    padding-top: 60px;
-}
-
-
-/* Modal Content/Box */
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto;
-    /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 60%;
-    /* Could be more or less, depending on screen size */
-}
-
-
-/* The Close Button (x) */
-
-.close {
-    position: absolute;
-    right: 25px;
-    top: 0;
-    color: #000;
-    font-size: 35px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: red;
-    cursor: pointer;
-}
-
-
-/* POPUP LOGIN END*/
-
-
 /*Grid for top meals*/
 
-.grid-container-allmeals {
-    display: inline-grid;
-    grid-gap: 10px;
-    grid-template-columns: auto auto auto auto;
-    justify-content: space-evenly;
+@media screen and (min-width: 768px) {
+    .grid-container-allmeals {
+        display: inline-grid;
+        grid-gap: 1.5vw;
+        grid-template-columns: 22% 22% 22% 22%;
+        justify-content: space-evenly;
+    }
+    .topmeals img {
+        width: 50%;
+    }
 }
 
-.topmeals {
-    padding: 7px;
-}
-
-.topmeals img {
-    filter: brightness(60%);
+@media screen and (max-width: 768px) {
+    .grid-container-allmeals {
+        display: inline-grid;
+        grid-gap: 15px;
+        grid-template-columns: 22% 22% 22% 22%;
+        justify-content: space-evenly;
+    }
+    .topmeals img {
+        width: 150px;
+    }
 }
 
 
