--- a/views/mealpackages.handlebars
+++ b/views/mealpackages.handlebars
@@ -1,3 +1,10 @@
+   <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1>Bootstrap Tutorial</h1>      
+    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+  </div>
+</div>
+  
   <div class="hero-image">
   <div class="hero-text">
     <h1 style="font-size:90px; color: white; font-weight: bold; ">Get Your Meals Delivered.</h1>
