--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/*HERO*/
+
 .jumbotron {
     background-image: url("https://cdn.shopify.com/s/files/1/1758/4293/t/71/assets/pf-02cbc49b--bannermeals2.png?v=1583889805");
     background-position: center;
@@ -20,12 +23,20 @@ body {
     font-size: 4em;
 }
 
+.containergif h5 {
+    color: whitesmoke;
+    font-size: 2em;
+}
+
 .containergif a {
     border: 2px solid rgb(236, 179, 198);
     padding: 6px;
     text-transform: uppercase;
     text-decoration: none;
 }
+
+
+/*HERO*/
 
 @media screen and (min-width: 768px) {
     nav {
@@ -102,6 +113,9 @@ gif images for content
     .topmeals img {
         width: 50%;
     }
+    .topmeals h5 {
+        font-size: 1em;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -114,7 +128,40 @@ gif images for content
     .topmeals img {
         width: 150px;
     }
+    .topmeals h5 {
+        font-size: 10px;
+    }
 }
 
 
 /*Grid for top meals*/
+
+@media screen and (min-width: 768px) {
+    .grid-container-allmealss {
+        display: inline-grid;
+        grid-gap: 1.5vw;
+        grid-template-columns: 22% 22% 22% 22%;
+        justify-content: space-evenly;
+    }
+    .topmealss img {
+        width: 60%;
+    }
+    .topmealss h5 {
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .grid-container-allmealss {
+        display: inline-grid;
+        grid-gap: 15px;
+        grid-template-columns: 22% 22% 22% 22%;
+        justify-content: space-evenly;
+    }
+    .topmealss img {
+        width: 120px;
+    }
+    .topmealss h5 {
+        font-size: 10px;
+    }
+}
