Added Responsiveness to the Registration and Login Pages

--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -34,7 +34,7 @@ hr {
 
 /* Set a style for the submit button */
 .registerbtn {
-  background-color: black;
+  background-color: #e8015a;
   color: white;
   padding: 16px 20px;
   margin: 8px 0;
@@ -64,7 +64,8 @@ a {
 <div class="form" >
     <form action="/">
   <div class="container">
-    <h1>Create Account</h1>
+    <br>
+    <h2 style="text-align: center;" >Create Account</h2>
 
     <hr>
     <label for="fn"><b>First Name</b></label>
@@ -89,3 +90,4 @@ a {
     <p>Already have an account? <a href="#">Sign in</a>.</p>
   </div>
 </form>
+</div>
