--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -62,7 +62,7 @@ a {
 
 
 <div class="form" >
-    <form action="/">
+    <form action="/registration" method="POST">
   <div class="container">
     <br>
     <h2 style="text-align: center;" >Create Account</h2>
