--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -14,8 +14,8 @@
 /* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
+  padding: 7px;
+  margin: 5px 0 10px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
@@ -61,25 +61,26 @@ a {
 </style>
 
 
-<div class="form" >
-    <form action="/registration" method="POST">
+<div class="form">
+    <form action="/registration/registration" method="POST" id="formid">
   <div class="container">
     <br>
-    <h2 style="text-align: center;" >Create Account</h2>
-
-    <hr>
+    <h4 style="text-align: center;" >Create Account</h4>
+<hr>
     <label for="fn"><b>First Name</b></label>
-    <input type="text"  name="fn" id="fn" required>
+    <input type="text"  name="fn" id="fn" >
    
     <label for="ln"><b>Last Name</b></label>
-    <input type="text"  name="ln" id="ln" required>
+    <input type="text"  name="ln" id="ln" >
 
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+    <input type="text" placeholder="Enter Email" name="email" id="email" >
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
-
+    <input type="password" placeholder="Enter Password" name="psw" id="psw" >
+ {{#each errorMessages}}
+<div><p style="color: red;">Error: {{this}}&#10071;</p></div>
+{{/each}}
     <hr>
     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
