--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -70,10 +70,10 @@ hr {
   
     <hr>
     <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="username" id="username">
+    <input type="text" placeholder="Enter Username" name="username" id="username" value="{{information.un}}">
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw">
+    <input type="password" placeholder="Enter Password" name="psw" id="psw" value="{{information.pw}}">
   {{#each errorMessages}}
 <div><p style="color: red;">Error: {{this}}&#10071;</p></div>
 {{/each}}
