Fixed MVC and added partially-correct  MongoDB

--- a/views/login/login.handlebars
+++ b/views/login/login.handlebars
@@ -1,16 +1,12 @@
-
 <style>
-
 * {
   box-sizing: border-box;
 }
-
 /* Add padding to containers */
 .container {
   padding: 10px;
   background-color: white;
 }
-
 /* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
@@ -20,18 +16,15 @@ input[type=text], input[type=password] {
   border: none;
   background: #f1f1f1;
 }
-
 input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
-
 /* Overwrite default styles of hr */
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
-
 /* Set a style for the submit button */
 .loginbtn {
   background-color: #e8015a;
@@ -43,24 +36,20 @@ hr {
   width: 100%;
   opacity: 0.9;
 }
-
 .loginbtn:hover {
   opacity: 1;
 }
-
 .img-fluid{
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 13%;
-
 }
-
 </style>
 
 
 <div class="form" >
-    <form action="/login/login" method="POST">
+    <form action="/Login" method="POST">
   <div class="container">
     <br>
     <h4 style="text-align: center;">Customer Login</h4>
@@ -69,11 +58,11 @@ hr {
 <img src="img/icon1.png" alt="Avatar" class="img-fluid">
   
     <hr>
-    <label for="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="username" id="username" value="{{information.un}}">
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" id="email" value="{{information.email}}">
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" value="{{information.pw}}">
+    <label for="password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="password" id="password" value="{{information.password}}">
   {{#each errorMessages}}
 <div><p style="color: red;">Error: {{this}}&#10071;</p></div>
 {{/each}}
