--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,9 @@
-
-
-
-<br><br><br><br><br>
-
+<br><br><br>
+<br><br><br>
 <div class="content">
 
-    <h2>Welcome!</h2>
-    <h3>We are happy to have you!</h3>
-
+    <h2>We are happy to welcome you!</h2>
+    <h3>Enjoy our best food, {{user.fname}} {{user.lname}} !</h3><br>
+    <button onclick="location.href='/Dashboard/Logout'" type="button">Logout</button>
+    
 </div>
