--- a/views/login/registration.handlebars
+++ b/views/login/registration.handlebars
@@ -68,6 +68,10 @@ a {
 
     <label for="password"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" id="password" value="{{information.password}}">
+
+<label for="admin"><b>Are you a clerk?</b></label>
+        <input type="checkbox" name="admin" value="true"> <b>yes</b>       
+
  {{#each errorMessages}}
 <div><p style="color: red;">Error: {{this}}&#10071;</p></div>
 {{/each}}
