--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,7 @@
 <div class="content">
 
     <h2>We are happy to welcome you!</h2>
-    <h3>Enjoy our best food, {{user.fname}} {{user.lname}} !</h3><br>
+    <h3>Enjoy our best food, {{user.fname}} {{user.lname}} !</h3><br><br>
     <button onclick="location.href='/Dashboard/Logout'" type="button">Logout</button>
     
 </div>
