Connected meals to MongoDb and made it work for view in Clerk menu

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,7 +35,7 @@
         <div class="topmeals"> 
             <img src="/img/{{this.img}}" class="img-fluid"> <br>
             <span id="title"><b>{{this.title}}</b><br></span>
-            <span id="price" style="color: red;"><b>{{this.price}}</b><br></span>
+            <span id="price" style="color: red;"><b>{{this.price}}$</b><br></span>
         </div>
     {{/each}}
     </div>
