--- a/views/mealpackages.handlebars
+++ b/views/mealpackages.handlebars
@@ -16,7 +16,7 @@
             <h5 id="category"><b>Category:</b> {{this.category}}<br></h5>
             <h5 id="description">{{this.description}}<br></h5>
             <h5 id="numofmeals"><b>Meals in package:</b> {{this.meals}}<br></h5>
-            <h5 id="price" style="color: crimson;"><b>{{this.price}}</b><br></h5>
+            <h5 id="price" style="color: crimson;"><b>{{this.price}}$</b><br></h5>
         </div>
     {{/each}}
     </div>
