--- a/views/dashboard/dashboardClerk.handlebars
+++ b/views/dashboard/dashboardClerk.handlebars
@@ -30,6 +30,6 @@
 <button onclick="location.href='/Dashboard/Edit'" class="btn">Edit an Existing Meal</button>
 
     
- <h5 style="margin-top: 2em;">When you are done, press the button below.</h5>
+ <h5 style="margin-top: 2em;">When you are done, press the button below</h5>
     <button style="margin-bottom: 5em;" onclick="location.href='/Dashboard/Logout'" class="button">Logout</button>
 </div>
