--- a/views/dashboard/edit.handlebars
+++ b/views/dashboard/edit.handlebars
@@ -1,37 +1,77 @@
 <style>
-    .addbtn {
+* {
+  box-sizing: border-box;
+}
+/* Add padding to containers */
+.container {
+  padding: 10px;
+  background-color: white;
+}
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 7px;
+  margin: 5px 0 10px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+/* Overwrite default styles of hr */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+/* Set a style for the submit button */
+.addbtn {
   background-color: #e8015a;
   color: white;
   padding: 16px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 50%;
+  width: 100%;
   opacity: 0.9;
 }
 .addbtn:hover {
   opacity: 1;
 }
-
+/* Add a blue text color to links */
+a {
+  color: dodgerblue;
+}
+/* Set a grey background color and center the text of the "sign in" section
+ */
+.signin {
+  background-color: #f1f1f1;
+  text-align: center;
+}
 </style>
-<br><br><br>
- <form class="modal-content" action="/Dashboard/Edit" method="POST">
+
+<br><br><br><br><br>
+<form class="modal-content" action="/Dashboard/Edit" method="POST">
 
     <div class="container">
-        <label for="title"><b>Title</b></label>
-        <input type="text" placeholder="Enter Title" name="title" value="{{ttitle}}">
 
-        <div class="errors">{{titleError}}</div>
+      <br><h1>Form to find an information about the package</h1><hr>
+      <label for="title"><b>Title</b></label>
+        <input type="text" placeholder="Enter Title" name="title" value="{{titleholder}}">
+      
+<br><br>
+  {{#if error}}
+            <h6 style="color: red;">Error: No package has been found &#10071;</h6>
+ {{/if}}
+
+ <button type="submit" class="addbtn">Get that info to me!</button>
+ <button onclick="location.href='/Dashboard/DataClerk'" type="button" class="addbtn">Go Back</button>
     </div>
-
-    <button type="submit">Find</button>
+<br><br>
+ 
 </form>
 
 
 
 
-
-
-
-
- <button onclick="location.href='/Dashboard/DataClerk'" type="button" class="addbtn">Go Back</button>
