--- a/views/dashboard/editing.handlebars
+++ b/views/dashboard/editing.handlebars
@@ -1,46 +1,94 @@
+<style>
+* {
+  box-sizing: border-box;
+}
+/* Add padding to containers */
+.container {
+  padding: 10px;
+  background-color: white;
+}
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 7px;
+  margin: 5px 0 10px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+/* Overwrite default styles of hr */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+/* Set a style for the submit button */
+.addbtn {
+  background-color: #e8015a;
+  color: white;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+.addbtn:hover {
+  opacity: 1;
+}
+/* Add a blue text color to links */
+a {
+  color: dodgerblue;
+}
+/* Set a grey background color and center the text of the "sign in" section
+ */
+.signin {
+  background-color: #f1f1f1;
+  text-align: center;
+}
+</style>
 <form class="modal-content" action="/Dashboard/Editing" method="POST" enctype="multipart/form-data">
     <div class="container">
-        
-        {{#if succUpdated}}
-            <h2>Your package has been successfully updated!</h2>
+         <br><h1>Form to Edit the Package</h1><hr>
+        {{#if Updated}}
+           <p style="color: red;">Success: Your package is updated&#10071;</p>
         {{/if}}
+{{#if error}}
+            <p style="color: red;">Error: All fields must be filled!&#10071;</p>
+ {{/if}}
+        <input type="hidden" placeholder="Enter Title" name="title" value="{{information.titleholder}}">
 
-        <input type="hidden" placeholder="Enter Title" name="title" value="{{information.title}}">
+       <label for="category">Category</label>
+        <input type="text" placeholder="Enter Category" name="category" value="{{information.category}}">
 
-        <label for="photo"><b>Photo</b></label>
-        <input type="file" name="photo">
 
-        <div class="errors">{{imgError}}</div>
+        <label for="price">Price</label>
+        <input type="text" placeholder="Enter Price" name="price" value="{{information.price}}">
 
-        <label for="cat"><b>Category</b></label>
-        <input type="text" placeholder="Enter Category" name="cat" value="{{information.category}}">
 
-        <div class="errors">{{catError}}</div>
+        <label for="meals">Number of Meals</label>
+        <input type="number" placeholder="Enter Number of Meals" name="meals" value="{{information.meals}}">
 
-        <label for="price"><b>Price</b></label>
-        <input type="text" placeholder="Enter Price" name="price" value="{{information..price}}">
 
-        <div class="errors">{{priceError}}</div>
+        <label for="description">Description</label>
+        <input type="text" placeholder="Enter Description" name="description" value="{{information.description}}">
 
-        <label for="nmeals"><b>Number of Meals</b></label>
-        <input type="number" placeholder="Enter Number of Meals" name="nmeals" value="{{information..meals}}">
+        
+        <label for="picture">Image</label>
+        <input type="file" name="picture">
+{{#if noImage}}
+        <div><p style="color: red;">Error: Image is Required&#10071;</p></div>
+ {{/if}}
+        <label for="top">Top meal?</label>
+        <input type="checkbox" name="top" value="true"> Yes
 
-        <div class="errors">{{nmealsError}}</div>
-
-        <label for="desc"><b>Description</b></label>
-        <input type="text" placeholder="Enter Description" name="desc" value="{{information..description}}">
-
-        <div class="errors">{{descError}}</div>
-
-        <label for="top"><b>Is it a top meal?</b></label>
-        <input type="checkbox" name="top" value="true"> <b>yes</b>
-
-        <div class="errors"></div>
-
-        <button type="submit">Edit Meal</button>
-
+        <button type="submit" class="addbtn">Edit Meal</button>
+ <button onclick="location.href='/Dashboard/DataClerk'" type="button" class="addbtn">Go Back</button>
     </div>
 
 </form>
 
- <button onclick="location.href='/Dashboard/DataClerk'" type="button" class="addbtn">Go Back</button>
+
